# fitatu_library

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  demo.py  example.py  pyproject.toml
.github/workflows/: ci.yml
docs/: API_OVERVIEW.md  ARCHITECTURE.md  COOKBOOK.md  DELETE_GUIDE.md  DELETE_SEARCH_ITEMS.md  FAQ.md  FRONTEND_VS_API_DELETION.md  GETTING_STARTED.md  RELEASING.md  STABILITY_MATRIX.md
src/fitatu_api/: __init__.py  api_client.py  fitatu_api.py  modules.py
tests/: conftest.py  test_client.py  test_facade.py  test_live_all.py  test_planner.py
