[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "fitatu-api"
version = "0.3.0"
description = "Unofficial Python API client for Fitatu — built for AI agents and automation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Adam Gajewski" }
]
keywords = ["fitatu", "api", "nutrition", "meal-planner", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/Jezue/fitatu_library"
Issues = "https://github.com/Jezue/fitatu_library/issues"
Changelog = "https://github.com/Jezue/fitatu_library/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "hatch>=1.12",
  "mypy>=1.11",
  "build>=1.2",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "types-requests>=2.32",
  "pre-commit>=3.8",
  "codespell>=2.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fitatu_api"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/docs",
]

[tool.hatch.envs.default.scripts]
format = "ruff format . && ruff check . --fix"
lint = "ruff check . && mypy src"
test = "pytest -q"
testcov = "pytest -q --cov-report=html"
typecheck = "mypy src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=fitatu_api --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["fitatu_api"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
